R2.11.1:    2018/03/20  T. Straumann
    TIMINGAPI -> R0.6
    EVENT     -> R4.3.0-BR-new_bsa_core
R2.11.0:    2018/03/20  T. Straumann
    drvPadUdpCommHWTime() always uses posix clock_gettime; removed variant
    that relied on EVR-specific code (ErGetTicks).

R2.10.0:    2017/06/06  H. Slepicka
    Bumped Event version to R4.2.9
    Bumped MiscUtils version to R2.2.5

R2.9.0:     2017/02/20  H. Slepicka
    Bumped EVENT version to R4.2.8.
    Changed name of CONFIG_SITE.Common.linuxRT* to remove glibc from it.

udpComm-R2-7-1: 2016/06/23 B. Hill
	Updated to miscUtils-R2-2-3 as the miscUtils-R2-2-2 libmiscUtils.a for linux-x86_64 and linuxRT
		has an undefined symbol S_ISDIR that should have been expanded as a macro.
	Build Linux targets against evrClient-R1-0-p7 and RTEMS targets against event-R4-2-4

udpComm-R2-7-0: 2016/06/13 B. Hill
-   Fixed setsockopt IP_MULTICAST_IF and added udpCommSetMCastTTL() function.
    Modified build to not try and build udpCommBSD for RTEMS as it isn't supported or used.
	Build Linux targets against evrClient-R1-0-p6 and RTEMS targets against event-R4-2-3

udpComm-R2-6-2: 2015/12/02 K. Kim
- Build against evrClient-R1-0-p4

udpComm-R2-6-1: 2015/12/02  K. Kim
- Support for sharing fcom among mutilple viocs
  (allow to reuse address for udpComm layer)

udpComm-R2-6-0: 2015/11/13  K. kim
- Build against evrClient, R1-0-p3, EVR sharing module

udpComm-R2-5-9: 2015/02/19  S.Condamoor
- Update event module - event-R4-1-6

udpComm-R2-5-8: 2015/01/14  K. Kim
- Update event module - event-R4-1-5

udpComm-R2-5-7: 2014/06/20, K. Kim
- Update event module - event-R4-1-3

udpComm-R2-5-6: 2014/04/15, luchini 
- Update event module - event-R4-1-1

udpComm-R2-5-5: 2014/02/28, lpiccoli 
- Update event module - event-R4-1-0

udpComm-R2-5-4: 2014/02/04, sonya
- src/drvPadUdpComm.c: relax restrictions on event time provider
  to support SPEAR BPMs  

udpComm-R2-5-3: 2014/01/29, sonya
 - Build against event-R4-0-0
udpComm-R2-5-2: 2013/08/14, khkim